--- a/visualgc_idea/resources/visualgc.properties
+++ b/visualgc_idea/resources/visualgc.properties
@@ -52,3 +52,17 @@ action.VisualGC.text=New VisualGC Window
 action.VisualGC.description=Open a new VisualGC window
 action.visualgc.MakeCoffeeAction.text=Donate to VisualGC
 action.visualgc.MakeCoffeeAction.description=Donate to support future dev of VisualGC, plugin is always free to use
+connect.remote.jvm=Connect Remote JVM
+remote.more.info=More info please follow the guide: How to Visualizing operations of a remote JVM
+remote.jvm.help.title=Click this button to Add Remote Host and monitor JVMs
+remote.jvm.help.description=Must run jstatd on remote host first
+connect.remote.jvm.message=Input remote hostname (sample input 192.168.3.15 or 192.168.3.15:1099), input empty value to connect local JVM
+link.label.error.fetch.jvm.list.please.add.following.lines.to.opened.editor=Error fetch JVM list: please add following lines to the opened editor!
+dialog.title.please.edit.file.restart.ide=Please edit the file and restart IDE
+link.label.more.info=More info
+tooltip.title.unable.to.access.jdk.jvmstat.classes=Unable to access JDK jvmstat classes
+status.text.loading.jvm.process.list=Loading JVM Process List...
+unlock.hint.msg=Unfortunately, ZGC and Remote JVM support is locked as you have not obtain the license yet. However you can still use this plugin for free with most functions.\nWould you like to register the plugin to make a donation and unlock the feature or start a 30 day free trial?
+unreg.msg=Unfortunately, you have not obtain the license yet. \n However you can still use this plugin for free with most functions.
+malformed.vm.identifier.0=Malformed VM Identifier: {0}
+registed.thanks.message=You have made a donation to VisualGC.\nThank you and this will made the plugin better!
